# plonky2-gpu

./: Cargo.toml
field/: Cargo.toml
field/src/: goldilocks_field.rs  packed.rs
plonky2/: Cargo.toml
plonky2/examples/: square_root.rs
plonky2/src/fri/: oracle.rs  prover.rs
plonky2/src/hash/: merkle_tree.rs
plonky2/src/iop/: generator.rs
plonky2/src/plonk/: prover.rs
starky/src/: prover.rs
