[package]
name = "plonky2_field"
description = "Finite field arithmetic"
version = "0.1.0"
edition = "2021"

[features]
default = []
cuda = []

[dependencies]
log = "0.4.14"
anyhow = { version = "1.0.40", default-features = false }
itertools = { version = "0.10.0", default-features = false, features = ["use_alloc"] }
num = { version = "0.4", default-features = false, features = ["alloc", "rand"] }
plonky2_util = { path = "../util", default-features = false }
rand = { version = "0.8.5", default-features = false, features = ["getrandom"] }
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }
static_assertions = { version = "1.1.0", default-features = false }
unroll = { version = "0.1.5", default-features = false }

[target.'cfg(feature = "cuda")'.dependencies]
rustacuda = "0.1.3"
rustacuda_core = "0.1.2"
